@startuml

title __CONTROLLER's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.BillingAccountController {
          + BillingAccountController()
          + addMoney()
          + ban()
          + delete()
          + getAll()
          + getAllByOwnerId()
          + getById()
          + save()
          + unBan()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductInstanceController {
          + ProductInstanceController()
          + changeStatus()
          + delete()
          + getAll()
          + getByUserAccountId()
          + save()
          + saveAll()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductsController {
          + ProductsController()
          + ban()
          + getAllSubscriptions()
          + getSubscriptionById()
          + getSubscriptionsByCategory()
          + getSubscriptionsByName()
          + save()
          + unBan()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.StatisticsController {
          + StatisticsController()
          + getStatisticsByCategory()
          + getStatisticsForBillngAccount()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.UserAccountController {
          + UserAccountController()
          + ban()
          + changeBillingAccount()
          + getAll()
          + getAllSubscriptions()
          + getUserAccountById()
          + getUserAccountByName()
          + save()
          + subcriptionsQuantity()
          + unBan()
      }
    }
  }
  

  by.training.nc.sd3.controller.BillingAccountController o-- by.training.nc.sd3.service.BillingAccountService : billingAccountService
  by.training.nc.sd3.controller.ProductInstanceController o-- by.training.nc.sd3.service.BillingAccountService : billingAccountService
  by.training.nc.sd3.controller.ProductInstanceController o-- by.training.nc.sd3.service.ProductInstanceService : productInstanceService
  by.training.nc.sd3.controller.ProductInstanceController o-- by.training.nc.sd3.service.UserAccountService : userAccountService
  by.training.nc.sd3.controller.ProductsController o-- by.training.nc.sd3.service.ProductOfferingService : productOfferingService
  by.training.nc.sd3.controller.StatisticsController o-- by.training.nc.sd3.service.StatisticsService : statisticsService
  by.training.nc.sd3.controller.UserAccountController o-- by.training.nc.sd3.service.UserAccountService : userAccountService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
